# CppLearingProject

./: .gitignore  README.md
AddressBookManagementSystem/: CMakeLists.txt  README.md
AddressBookManagementSystem/include/: address.h  address_book.h  menu.h
AddressBookManagementSystem/src/: address_book.cc  main.cc  menu.cc
EmployeeManagementSystem/: CMakeLists.txt  README.md
EmployeeManagementSystem/include/: boss.h  employee.h  manage_system.h  manager.h  worker.h
EmployeeManagementSystem/src/: Employee.cc  boss.cc  main.cc  manage_system.cc  manager.cc  worker.cc
